# policy-based-design-cffi

./: .bazelrc  Dockerfile  MODULE.bazel  README.md  WORKSPACE  build.sh  pyproject.toml
.github/workflows/: ci.yml
lib/: BUILD
lib/include/: calculator_c_api.h
lib/src/: calculator_c_api.cpp
lib/test/: BUILD
python/: BUILD  calculator_cffi.py  calculator_test.py  example.py
python/calculator/: __init__.py  calculator_cffi.py
src/: BUILD  main.cpp
