module(
    name = "policy_based_design_cffi",
    version = "0.1.0",
)

# ----------------------------
# Core C++ rules (BCR)
# ----------------------------
# Match the version BCR resolves under Bazel 8
bazel_dep(name = "rules_cc", version = "0.2.8")

# ----------------------------
# GoogleTest (BCR)
# ----------------------------
bazel_dep(
    name = "googletest",
    version = "1.17.0.bcr.2",
    dev_dependency = True,
)

# ----------------------------
# Python rules + toolchain (BCR)
# ----------------------------
bazel_dep(name = "rules_python", version = "1.7.0")

# Register system Python 3.10 toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    python_version = "3.10",
    is_default = True,
)

# IMPORTANT:
# The extension generates a repo named python_3_10 (not python_toolchains).
use_repo(python, "python_3_10")

